--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
     <link rel="stylesheet" href="./style.css">
@@ -11,7 +12,7 @@
 
     <header>
         <nav class="nav">
-            <img src="./IMG/logo.png" alt="" alt="Logo Pokédex">
+            <img src="./IMG/logo.png" alt="Logo Pokédex">
             <ul class="nav-list">
                 <li class="nav-item"><button class="btn btn-header" id="ver-todos">Ver todos</button></li>
                 <li class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></li>
